<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coinbase</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
	<string name="email">电子邮箱</string>
	<string name="email1">you@domain.com</string>
	<string name="password">密码</string>
	<string name="password1">输入您的密码</string>
	<string name="password2">创建新密码</string>
	<string name="register">登出</string>
	<string name="register1">注册</string>
	<string name="arrows">\u25C4</string>
	<string name="surname">姓氏</string>
	<string name="name">名字</string>
</resources>
