<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#104E8B"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:paddingBottom="5sp"
        android:paddingTop="5dp"
        android:orientation="horizontal"
         >

        <Button
            android:id="@+id/button1"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:background="#104E8B"
            android:text="@string/arrows"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="280sp"
        android:layout_height="126sp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/email1"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            android:textColorHint="#CCCCCC"
            android:textColor="#000000" 
             >
        </EditText>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="#000000"
             />

        <EditText
            android:id="@+id/password3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:paddingLeft="8sp"
            android:paddingRight="8sp" 
            android:textColorHint="#CCCCCC"
            android:textColor="#000000" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="280sp"
        android:layout_height="wrap_content"
     >

        <Button
            android:id="@+id/button_login"
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:backgroundTint="#1C86EE"
            android:textColor="#ffffff" />

    </RelativeLayout>

</LinearLayout>