<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#104E8B"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
     >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240sp" >

        <Button
            android:id="@+id/first_button1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register" 
            android:textColor="#ffffff"
            android:backgroundTint="#1C86EE"
            />

        <Button
            android:id="@+id/first_button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_button1"
            android:layout_centerHorizontal="true"
            android:text="@string/login" 
            android:textColor="#ffffff"
            android:background="@null"
            />

    </RelativeLayout>

</LinearLayout>